<resources>
    <string name="app_name">Jogo da Memorização</string>
    <string name="reset">Reiniciar</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>

    <string name="progress_label">Tempo: </string>
    <string name="congratulations">Fim de jogo!</string>
    <string name="subtitle_congratulations"></string>
    <string name="player_score">Digite seu nome</string>
    <string name="btn_save_score">Salvar pontuação</string>
    <string name="btn_score">Pontuações</string>
    <string name="errors">Errors:</string>

    <string name="btn_clear">Limpar</string>
    <string name="btn_back">Voltar</string>
</resources>