<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="@+id/bgApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgApp"
        app:layout_constraintVertical_bias="0.05"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_reset"

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginRight="80dp"

            android:backgroundTint="@color/grey"
            android:onClick="resetGame"
            android:text="@string/reset"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_score"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/grey"
            android:onClick="scoreView"
            android:text="@string/btn_score"
            android:gravity="center"
            android:textColor="@color/black" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="309dp"
        android:layout_height="426dp"
        android:layout_marginTop="164dp"
        android:layout_weight="6"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="3"
        app:layout_constraintLeft_toLeftOf="@+id/bgApp"
        app:layout_constraintRight_toRightOf="@+id/bgApp"
        app:layout_constraintTop_toTopOf="@+id/bgApp">

        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="selectNumber"
            android:text="@string/btn1"
            app:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="selectNumber"
            android:text="@string/btn2"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="selectNumber"
            android:text="@string/btn3"
            app:backgroundTint="@color/green" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="selectNumber"
            android:text="@string/btn4"
            app:backgroundTint="@color/yellow" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="selectNumber"
            android:text="@string/btn5"
            app:backgroundTint="@color/grey" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="selectNumber"
            android:text="@string/btn6"
            app:backgroundTint="@color/yellow_900" />
    </GridLayout>

    <GridLayout
        android:id="@+id/grid_congratulations"
        android:layout_width="309dp"
        android:layout_height="426dp"
        android:layout_marginTop="164dp"
        android:layout_weight="6"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="4"
        app:layout_constraintLeft_toLeftOf="@+id/bgApp"
        app:layout_constraintRight_toRightOf="@+id/bgApp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/bgApp">

        <TextView
            android:id="@+id/congratulations_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/total_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Errors: 0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="visible" />



        <EditText
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/player_score"
            android:textAlignment="center"
            android:textColorHint="@color/purple_500"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_save_score"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="saveHighscore"
            android:text="@string/btn_save_score"
            app:backgroundTint="@color/grey"
            android:textColor="@color/black"/>
    </GridLayout>

    <GridLayout
        android:id="@+id/grid_progress"
        android:layout_width="339dp"
        android:layout_height="22dp"
        android:layout_weight="2"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/bgApp"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="@+id/bgApp"
        app:layout_constraintRight_toRightOf="@+id/bgApp"
        app:layout_constraintTop_toTopOf="@+id/bgApp"
        app:layout_constraintVertical_bias="0.904"
        android:visibility="visible">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/progress_label"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="261dp"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="1"
            android:minWidth="200dp"
            android:minHeight="10dp"
            android:progress="0"
            android:progressBackgroundTint="@color/dark_grey"
            android:progressTint="@color/teal_200"
            android:scaleY="5" />
    </GridLayout>

    <RelativeLayout
        android:layout_width="421dp"
        android:layout_height="56dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="@+id/bgApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="@+id/bgApp"
        app:layout_constraintRight_toRightOf="@+id/bgApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgApp"
        app:layout_constraintVertical_bias="0.145">

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>